logs/starter.templates.python-django.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Inirama-0.8.0.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/Starter-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/oset'...
Listing './lib/python3.5/site-packages/oset-0.1.3.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/starter'...
Listing './lib/python3.5/site-packages/starter/templates'...
Listing './lib/python3.5/site-packages/starter/templates/license-bsd'...
Listing './lib/python3.5/site-packages/starter/templates/py-makefile'...
Listing './lib/python3.5/site-packages/starter/templates/py-package'...
Listing './lib/python3.5/site-packages/starter/templates/py-package/docs'...
Listing './lib/python3.5/site-packages/starter/templates/py-package/tests'...
Listing './lib/python3.5/site-packages/starter/templates/py-package/{{PACKAGE}}'...
Listing './lib/python3.5/site-packages/starter/templates/python-django'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main/static'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main/templates'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main/templates/main'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main/tests'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/main/utils'...
Listing './lib/python3.5/site-packages/starter/templates/python-django/settings'...
Compiling './lib/python3.5/site-packages/starter/templates/python-django/wsgi.py'...
***   File "./lib/python3.5/site-packages/starter/templates/python-django/wsgi.py", line 16
    raise exc_type, exc_value, tb
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/starter/templates/starter-module'...
Listing './lib/python3.5/site-packages/starter/templates/starter-module/starter'...
Listing './lib/python3.5/site-packages/starter/templates/starter-module/starter/templates'...
Listing './lib/python3.5/site-packages/starter/templates/starter-module/starter/templates/{{MODULE}}'...
Listing './lib/python3.5/site-packages/starter.templates.python_django-0.1.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
